# LiteralEnum

./: .gitignore  BASED_PYRIGHT_PLAN.md  CONTRIBUTING.md  LITMUS.md  MYPY_PLUGIN_PLAN.md  PEP.md  PEP_ALT.md  PEP_ALT_2.md  PEP_PATH.md  PITCH.md  PROOF_OF_CONCEPT.md  README.md  REQS.md  TODO.md  TYPING_DISCUSSION.md  TYPING_SIG.md  pyproject.toml  pyrightconfig.json  test_basedpyright.py  test_simple.py
.github/workflows/: build-pycharm-plugin.yml  publish.yml
pycharm-plugin/: build.gradle.kts  gradle.properties  settings.gradle.kts
pycharm-plugin/src/test/testData/: literalenum_test.py
src/: typing_literalenum.py
src/existing/: c_enum.py  d_literal.py  f_literal_hack.py  g_custom_type.py  h_custom_literal_namespace.py
src/literalenum/: __init__.py  __init__.pyi  json_schema.py  literal_enum.py  mypy_plugin.py  pydantic.py  stubgen.py
src/literalenum/compatibility_extensions/: __init__.py  annotated.py  bare_class.py  base_model.py  click_choice.py  django_choices.py  enum.py  graphene_enum.py  int_enum.py  json_schema.py  literal.py  random_choice.py  regex.py  sqlalchemy_enum.py  str_enum.py  strawberry_enum.py
src/literalenum/sample/: http.py  use.py
src/literalenum/samples/: http.py
src/literalenum_sample/: http.py  http.pyi  use.py  use2.py
src/sample_str_enum_solutions/: a_strenum.py  b_str_enum.py  e_literal_plus_namespace.py
tests/: test_literalenum.py  test_typing.py  test_typing_literalenum.py
typings/literalenum/sample/: http.pyi
typings/literalenum/samples/: http.pyi
(+7 files in other folders)
