[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "literalenum"
version = "0.1.0"
description = "A Python typing construct that provides namespaced literal constants with advanced typing features."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }

authors = [
  { name = "Torin Halsted", email = "modularizer@gmail.com" }
]

keywords = [
  "typehinting",
  "python",
]

dependencies = [
]


[project.urls]
Homepage = "https://github.com/modularizer/literalenum"
Repository = "https://github.com/modularizer/literalenum"
Issues = "https://github.com/modularizer/literalenum/issues"


[project.scripts]
lestub = "literalenum:lestub"


[tool.hatch.build.targets.wheel]
packages = ["src/literalenum"]

[tool.hatch.build.targets.wheel.force-include]
"src/literalenum/py.typed" = "literalenum/py.typed"


[tool.black]
line-length = 100
target-version = ["py310"]


[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]


[tool.mypy]
python_version = "3.10"
plugins = ["literalenum.mypy_plugin"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = false
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

